# django-extended-history

./: .gitattributes  LICENSE  MANIFEST.in  README.rst  pyproject.toml  runtests.py  setup.cfg
.github/workflows/: publish-pypi.yml
django_extended_history/: _test_settings.py  admin.py  tests.py
django_extended_history/templates/: object_history.html
django_extended_history/templates/admin/admin/: change_form.html
