[metadata]
name = django-extended-history
version = 0.9.0
author = Rob Aben
author_email = rob@healthyfridge.nl
description = Drop-in replacement for default Django history
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = BSD-3-Clause
url = https://github.com/HealthyFridge/django-extended-history
project_urls =
    Bug Tracker = https://github.com/HealthyFridge/django-extended-history/issues
    repository = https://github.com/HealthyFridge/django-extended-history
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django :: 4
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = django_extended_history
packages = find:
python_requires = >=3.8
install_requires =
    django >= 4

[options.packages.find]
where = django_extended_history