[metadata]
name = django-extended-history
version = 1.4.0
author = Rob Aben
author_email = rob@healthyfridge.nl
description = Drop-in replacement for default Django history
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
url = https://github.com/HealthyFridge/django-extended-history
project_urls =
    Bug Tracker = https://github.com/HealthyFridge/django-extended-history/issues
    repository = https://github.com/HealthyFridge/django-extended-history
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = django_extended_history
include_package_data = True
python_requires = >=3.8
install_requires =
    django >= 4.1
    json2html >= 1.3.0

[options.packages.find]
where = django_extended_history
